# just_storage

./: .dockerignore  .env.example  .gitignore  .mailmap  BENCHMARK_REMOTE_README.md  BINARY_CONTAINER_OPTIMIZATION_REPORT.md  BINARY_CONTAINER_POC_SUMMARY.md  BUNDLE_POC_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_SUMMARY.md  Dockerfile  EXTRACTION_SUMMARY.md  GIT_SYNC_STATUS.md  IMPLEMENTATION.md  LINTING_REPORT.md  LINTING_RUN_REPORT.md  LINTING_SETUP.md  Makefile  ORG_PROFILE.md  QUALITY_IMPROVEMENT_REPORT.md  README.md  SCANNER_CONFIG.md  SECURITY.md  TEST_SUITE_REPORT.md  TOOLS_INSTALLATION_SUMMARY.md  app.json  benchmark-remote.sh  clean_up.sh  deny.toml  docker-compose.yml  env.template  pypi  renovate.json  rust-toolchain.toml  rustfmt.toml  (+3 more)
.do/: app.yaml
binary-container-poc/: ADVANCED_OPTIMIZATION_ANALYSIS.md  COMPRESSION_ALGORITHMS_ANALYSIS.md  Cargo.toml  EMBEDDINGS_COMPRESSION_ANALYSIS.md  EXPERIMENT_ANALYSIS.md  EXPERIMENT_REPORT.md  FILE_TYPE_DETECTION_REFERENCE.md  README.md  SMART_COMPRESSION_GUIDE.md  clippy.toml  deny.toml  document.bdc  rustfmt.toml
binary-container-poc/benches/: container_benchmark.rs
binary-container-poc/examples/: basic_usage.rs  compression_algorithms_test.rs  embeddings_compression_test.rs  smart_compression.rs
binary-container-poc/src/: compression_strategy.rs  container.rs  format.rs  lib.rs  reader.rs  writer.rs
docs/: API.md  (+14 more)
rust/: .env.example  .tarpaulin.toml  Cargo.toml  benchmark_history.csv  clippy.toml  deny.toml  prepare-sqlx.sh  rustfmt.toml
rust/.sqlx/: query-000054c6111daecdfcdf2b711369bdc51d676a2d0f20d2122e953ace5f31bb84.json  query-3c1dd50d91bda04b49d3f28afba8efd13f2e1b20aab6f3d93d6fcaa5ad60e37b.json  query-3e894698dc369b29511355e700749d0d46b7d839aaf8a25b40932b97da58562a.json  query-4b5e9c0617e661b3404e23f3a1dfb97473a2a804ebe03a136d726078f0175f87.json  query-63a4944809198cba78baa7c51eecd064d81c8c1659b79881d2fcfe8ec4363923.json  query-95a7096cf1a3a352f9b29990d41f9cc97c137a4b931e40bd56f7fb2d7496e951.json  query-c2dec929a87ce1ea2061aa79d1501ab4b931daabca4f372c7c62a33152a86ce7.json  query-cb08b8afed74a20a8f69179973abfad858eaa89217c9d98e850c42a936191591.json
rust/benches/: gc_bench.rs  hash_bench.rs  http_bench.rs  memory_bench.rs  resource_bench.rs  storage_bench.rs
rust/docs/: OIDC_PLAN.md
rust/internal_static/: ops.css  ops.js
rust/migrations/: 0001_initial_schema.sql  0006_fix_gc_signatures.sql  0008_fix_gc_return_types_final.sql  0009_add_sessions_table.sql  0010_hash_api_keys.sql  003_add_metadata.sql  004_add_search_indexes.sql  005_add_audit_logs.sql  README.md
rust/rust/src/api/middleware/: cors.rs  metrics.rs
rust/src/: config.rs  lib.rs  main.rs
rust/src/api/: errors.rs  mod.rs  openapi.rs  router.rs
rust/src/api/handlers/: api_keys.rs  delete.rs  download.rs  health.rs  health_checks.rs  list.rs  mod.rs  search.rs  text_search.rs  upload.rs
rust/src/api/handlers/tests/: health_tests.rs  mod.rs
rust/src/api/internal/: auth.rs  mod.rs  templates.rs
rust/src/api/middleware/: audit.rs  audit_config.rs  audit_loggers.rs  audit_middleware.rs  audit_types.rs  auth.rs  auth_config.rs  authorization.rs  config.rs  content_type.rs  cors.rs  csrf.rs  factory.rs  htmx.rs  metrics.rs  mod.rs  oidc_config.rs  rate_limiting.rs  security_config.rs  security_headers.rs  security_headers_impl.rs  size_limits.rs  size_limits.rs.bak  validation.rs
rust/src/application/: builder.rs  dto.rs  errors.rs  mod.rs  validation.rs
rust/src/application/gc/: config.rs  mod.rs  results.rs  scheduler.rs  worker.rs
rust/src/application/ports/: api_key_repository.rs  audit_repository.rs  blob_repository.rs  blob_store.rs  mod.rs  object_repository.rs
rust/src/application/use_cases/: api_keys.rs  delete_object.rs  download_object.rs  list_objects.rs  mod.rs  search_objects.rs  text_search_objects.rs  upload_object.rs
rust/src/domain/: authorization.rs  error_types.rs  errors.rs  mod.rs  validation.rs
rust/src/domain/entities/: api_key.rs  blob.rs  mod.rs  object.rs
rust/src/domain/value_objects/: api_key.rs  content_hash.rs  metadata.rs  mod.rs  namespace.rs  object_id.rs  object_status.rs  storage_class.rs  tenant_id.rs
rust/src/infrastructure/persistence/: mod.rs  postgres_api_key_repository.rs  postgres_audit_repository.rs  postgres_blob_repository.rs  postgres_object_repository.rs  query_builder.rs  sessions.rs
rust/src/infrastructure/storage/: content_hasher.rs  local_filesystem_store.rs  mod.rs  path_builder.rs
rust/templates/internal/: base.html  health.html  login.html
rust/tests/: PHASE-2-REORGANIZE.md  PHASE-3-FEATURE-ORGANIZATION.md  api_endpoint_tests.rs  common_api_server_tests.rs  common_assertions_tests.rs  common_builders_tests.rs  common_database_tests.rs  common_http_tests.rs  common_mocks_tests.rs  common_smoke.rs  common_smoke_tests.rs  e2e.rs  integration.rs  integration_test.rs  performance.rs  performance_validation.rs  property.rs  property_tests.proptest-regressions  property_tests.rs  sqlx_integration_tests.rs  test_common_builders.rs  test_common_database.rs  test_common_mocks.rs  test_common_smoke.rs  test_fixtures.rs  testcontainers_integration.rs  unit.rs
rust/tests/common/: assertions.rs  builders.rs  database.rs  environment.rs  fixtures.rs  http.rs  mocks.rs  mod.rs  oidc.rs
rust/tests/e2e/: api.rs  security.rs
rust/tests/e2e/api/: api_key_management_tests.rs  health_endpoints_tests.rs  mod.rs  object_lifecycle_tests.rs  openapi_tests.rs  search_endpoints_tests.rs
rust/tests/e2e/security/: authentication_tests.rs  headers_and_cors_tests.rs  htmx_tests.rs  mod.rs  oidc_tests.rs  rate_limiting_tests.rs  validation_tests.rs
rust/tests/integration/common/: smoke_tests.rs
rust/tests/integration/use_cases/: multi_object_operations.rs  namespace_validation.rs  object_lifecycle.rs  storage_class_behavior.rs
rust/tests/performance/: mod.rs
rust/tests/property/domain/: mod.rs
rust/tests/unit/common/: http_helpers.rs
rust/tools/: deploy.rs  validate_db.rs
(+77 files in other folders)
