[package]
name = "just_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# HTTP framework
axum = "0.8"

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
  "migrate",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Authentication
jsonwebtoken = { version = "10", default-features = false, features = [
  "rust_crypto",
] }
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI tools
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
mockall = "0.14"
bytes = "1"
tempfile = "3.23.0"
criterion = { version = "0.8.1", features = ["async_tokio"] }

[[bin]]
name = "validate_db"
path = "tools/validate_db.rs"

[[bench]]
name = "storage_bench"
harness = false
