[package]
name = "just_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# HTTP framework
axum = "0.8"

# OpenAPI/Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Validation
validator = { version = "0.20", features = ["derive"] }
regex = "1.11"

# Tower middleware
tower = { version = "0.5.2", features = ["util"] }

# Security & Rate Limiting
tower-http = { version = "0.5", features = ["cors", "limit", "sensitive-headers", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
  "migrate",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
dashmap = "6.1"
rand = "0.9.2"

# Hashing
# SHA-256 with SIMD optimizations for performance
# - asm: Enables assembly-optimized SHA-256 on x86_64
# - asm-aarch64: Enables assembly-optimized SHA-256 on ARM64
sha2 = { version = "0.10", features = ["asm", "asm-aarch64"] }
hex = "0.4"

# Authentication
jsonwebtoken = { version = "10", default-features = false, features = [
  "rust_crypto",
] }
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI tools
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
toml = "0.9"
serde_yaml = "0.9"

# Additional utilities for better performance and security
once_cell = "1.20"  # For lazy statics
parking_lot = "0.12"  # Better mutex performance
bytes = "1.10"  # Byte buffer utilities

[dev-dependencies]
mockall = "0.14"
bytes = "1"
tempfile = "3.23.0"
criterion = { version = "0.8.1", features = ["async_tokio"] }
tower = "0.5"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4"] }
proptest = "1.5"
proptest-derive = "0.5"

# Test containers for integration testing
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# Code coverage (cargo-llvm-cov is more compatible with modern Rust)
cargo-llvm-cov = "0.6"

[[bin]]
name = "validate_db"
path = "tools/validate_db.rs"

[[bin]]
name = "just-storage-deploy"
path = "tools/deploy.rs"

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "resource_bench"
harness = false

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "http_bench"
harness = false

[[bench]]
name = "gc_bench"
harness = false
