[package]
name = "just_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
futures-util = "0.3"

# HTTP framework
axum = "0.8.8"

# OpenAPI/Swagger
utoipa = { version = "5", features = ["axum_extras", "time", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Validation
validator = { version = "0.20", features = ["derive"] }
regex = "1.11"

# Tower middleware
tower = { version = "0.5.2", features = ["util"] }

# Security & Rate Limiting
tower-http = { version = "0.6.8", features = ["cors", "limit", "sensitive-headers", "compression-gzip", "fs", "set-header"] }

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "time",
  "uuid",
  "migrate",
  "ipnetwork",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
thiserror = "2.0"
async-trait = "0.1"
dashmap = "6.1"
rand = "0.10"

# Templating & HTMX
askama = "0.15"
axum-htmx = "0.8.1"

# Hashing
# SHA-256 with SIMD optimizations for performance
# - asm: Enables assembly-optimized SHA-256 on x86_64
# - asm-aarch64: Enables assembly-optimized SHA-256 on ARM64
sha2 = { version = "0.10", features = ["asm", "asm-aarch64"] }
hex = "0.4"
aes-gcm = "0.10.3"

# Authentication
jsonwebtoken = { version = "10", default-features = false, features = [
  "rust_crypto",
  "pem",
] }
base64 = "0.22"
openidconnect = "4"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI tools
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
toml = "0.9"
serde_yaml_bw = "2"

# Additional utilities for better performance and security
once_cell = "1.20"  # For lazy statics
parking_lot = "0.12"  # Better mutex performance
bytes = "1.10"  # Byte buffer utilities
tower-cookies = "0.11.0"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
mockall = "0.14"
tempfile = "3.23.0"
criterion = { version = "0.8.1", features = ["async_tokio"] }
proptest = "1.9"
proptest-derive = "0.7"

# Test containers for integration testing
testcontainers = "0.27"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
rsa = "0.9"
base64 = "0.22"
wiremock = "0.6.5"

[[bin]]
name = "validate_db"
path = "tools/validate_db.rs"

[[bin]]
name = "just-storage-deploy"
path = "tools/deploy.rs"

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "resource_bench"
harness = false

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "http_bench"
harness = false

[[bench]]
name = "gc_bench"
harness = false
